--- a/src/scss/palette/_palette.scss
+++ b/src/scss/palette/_palette.scss
@@ -13,7 +13,7 @@
 
   ul {
     z-index: 1000;
-    width: 100%;
+    width: 95%;
   }
 
   li {
@@ -37,11 +37,11 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     position: relative;
 
     .color-info {
-      width: 33%;
+      width: 33.33%;
       display: flex;
       justify-content: center;
     }
